--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,7 +27,7 @@ jobs:
     steps: 
       - name: Deploy to Linux
         uses: actions/checkout@v3
-      - uses: ./bin
+      - uses: bin
       - name: Run the Webserver
         run: 
           main
