--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,10 +27,12 @@ jobs:
     steps: 
       - name: Deploy to Linux
         uses: actions/checkout@v3
-      - uses: ./bin
-      - name: Run the Webserver
-        run: 
-          main
+      - name: run web server
+        run: | 
+          /bin/main
+      
+      
+      
 
 
 
