--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,11 +25,11 @@ jobs:
     needs: build
 
     steps: 
-      - name: Deploy to Linux
+      - name: Deploy to Windows
         uses: actions/checkout@v3
       - name: run web server
         run: | 
-          /bin/main
+          ./bin/main
       
       
       
