--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
       - name: run web server
         run: | 
-          sudo ./bin/main
+          /usr/bin/systemctl start ./bin/main
       
       
       
