--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
       - name: run web server
         run: | 
-          sudo chmod +x /opt/appDir/go_app
+          sudo chmod +x ./bin/main
           ./bin/main
       
       
