--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,6 +30,7 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: main
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ./main.exe
       
       
