--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Build and test application
       run: |
         get-process | ?{$_.ws -gt 100mb}
+        go build -o bin/main main.go
       shell: 
         powershell      
 
