--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,8 +39,8 @@ jobs:
         uses: actions/checkout@v3
       - name: run web server
         run: | 
-          go build -o bin/main main.go
-          /bin/main.exe
+          go build -o bin/main.exe main.go
+          bin/main.exe
 
 
       
