--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,9 +36,11 @@ jobs:
     steps:
       - name: Deploy to Windows
         uses: actions/checkout@v3
-      - name: run web server
+      - name: Build go application
         run: | 
           go build -o bin/main.exe main.go
+      - name: Run go application
+        run: |
           bin/main.exe
           
 
